Fix dev-dependencies block for black

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -13,7 +13,7 @@ pytest-cov = "*"
 coverage = "*"
 isort = "*"
 autoflake = "*"
-black = { version = "*", allows-prereleases = true }
+black = { version = "*", allow-prereleases = true }
 flake8 = "*"
 mypy = "*"
 
