--- a/{{cookiecutter.project_slug}}/Makefile
+++ b/{{cookiecutter.project_slug}}/Makefile
@@ -82,6 +82,28 @@ lock:
 develop:
 	./scripts/develop.sh
 
+.PHONY: docs-build  ## Generate the docs and update README.md
+docs-build:
+	python -m mkdocs build
+	cp ./docs/index.md ./README.md
+	cp ./docs/contributing.md ./CONTRIBUTING.md
+
+.PHONY: docs-build-ci  ## Generate the docs and check README.md is up-to-date
+docs-build-ci:
+	python -m mkdocs build
+	cmp README.md docs/index.md
+	cmp CONTRIBUTING.md docs/contributing.md
+
+.PHONY: docs-format  ## Format the python code that is part of the docs
+docs-format:
+	isort -rc $(docs_src)
+	autoflake -r --remove-all-unused-imports --ignore-init-module-imports $(docs_src) -i
+	black -l 82 $(docs_src)
+
+.PHONY: docs-live  ## Serve the docs with live reload as you make changes
+docs-live:
+	mkdocs serve --dev-addr 0.0.0.0:8008
+
 .PHONY: version  ## Bump the version in both pyproject.toml and __init__.py (usage: `make version version=minor`)
 version: poetryversion
 	$(eval NEW_VERS := $(shell cat pyproject.toml | grep "^version = \"*\"" | cut -d'"' -f2))
