Various minor improvements

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -16,6 +16,8 @@ autoflake = "*"
 black = { version = "*", allow-prereleases = true }
 flake8 = "*"
 mypy = "*"
+impulse = { version = "*", allow-prereleases = true }
+networkx = "*"
 
 [tool.black]
 line-length = 120
