--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -1,7 +1,8 @@
 [tool:pytest]
 testpaths = tests
 timeout = 10
-filterwarnings = error
+;filterwarnings = error
+filterwarnings = ignore
 
 [coverage:run]
 source = {{cookiecutter.project_slug}}
@@ -19,5 +20,5 @@ exclude_lines =
 
 [flake8]
 max-line-length = 120
-ignore = E203,W503,F821,F723
+ignore = E203,E741,W503,F821,F723,F811
 recursive = True
